style.css
/*!IMPORTANT*/
/*PLEASE GIVE A WIDTH OF AT LEAST 102vw TO ANY OF YOUR SECTIONS, TO COVER THE SPACE LEFT BY SLIM SCROLL BAR*/
@import url("https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css");
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
@import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900");

html, body {
  width: 100%;
  height: 100%;
  letter-spacing: 1.5px;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Maven Pro', sans-serif;
  -webkit-tap-highlight-color: rgba(224, 224, 224, 0.2);
}

@media (max-width: 768px) {
  section {
    padding-top: 10px;
  }

}


h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
  letter-spacing: 2px;
}

body{
    overflow-x: hidden;
}


#octa2-ki-photo-mobile{
    display: none;
    width: 0;
    height: 0;
}

/*CSS FOR LANDING SECTION BEGINS*/
#wrapper {
  overflow-x: hidden;
  /* Enable scrolling on the page. */
  overflow-y: auto;
  /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
  perspective: 2px;
  height: 100vh;
 

}

.parallax::after {
  /* Display and position the pseudo-element */
  content: " ";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  
  /* Move the pseudo-element back away from the camera,
   * then scale it back up to fill the viewport.
   * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
  transform: translateZ(-1px) scale(1.5);
  /* Force the background image to fill the whole element. */
  background-size: 100%;
  /* Keep the image from overlapping sibling elements. */ 
  z-index: -1;
}


.bg1::after {
  background-image: url("img/top.png");
    background-size: cover;
    background-position: left;
}

.bg2::after {
  background-image: url("img/bg2.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
.contentt {
    position: relative;
    width:102vw; /* Changed width to 102 to prevent unwanted white bars*/
    margin-top: -10px;
    margin-left:-10px;


  /* The height of the container. Must be set, but it doesn't really matter what the value is. */
  height: 100vh;
  
}

.section2 {
    /* Needed for children to be absolutely positioned relative to the parent. */
  position: relative;
  /* The height of the container. Must be set, but it doesn't really matter what the value is. */
  height: 100vh;
}
@media only screen and (max-width: 564px) {

    .section2{
      display: ;
    }
    
}

.static {
  background:black;
}
#logo{
    width:400px;
    filter:drop-shadow(10px 10px 5px black);
    margin-top:220px;
}

@media only screen and (max-width: 564px) {

    #logo{
     width:80vw;   
    }        

    .aboutsection{
      min-height: 300vh;
      background-color: black;
       padding-top: 10px;
    }
    #sponsor-logo{
        height:auto !important;
        width:200px!important;
        padding:20px !important;
        padding-top: none !important;
        
    }
    #faq-vaali-photo{
        width:75% !important;
        padding-bottom: 20%;
    }
    #octa2-ki-photo{
        height:0vh;
        display: none;
            
    }
    #octa2-ki-photo-mobile{
        display: block;
        height: auto;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
    }
}


.aboutsection{
  text-align: center;min-height: 90vh;
   padding-top: 10px;
   background-color: black;
}
.register-btn{
    
    padding:5px 40px;
    background: none;
    color:white;
    border:2px solid white;
    border-radius: 40px;
    cursor:hand;
    box-shadow: 4px 4px 10px #000;
    transition: all ease-in-out 0.5s;
    outline: none;
}
.register-btn:hover{
    background:white;
    outline: none;
    color:black;
    transition: all ease-in-out 0.5s;
}


/*LANDING SECTION CSS ENDS*/

.section{
    background: black;
    width:102vw;
      /* Needed for children to be absolutely positioned relative to the parent. */
      position: relative;
      /* The height of the container. Must be set, but it doesn't really matter what the value is. */
      height: 50vh;

    }

.sectionn-heading{
    text-align: center;
    height: 100px;
    color: white;
    font-size: 52px;
}
.counttext{
  text-align: center; color:#8847dd; font-size: 20px;
}
.aboutrow{
  max-width: 55%;margin: 0 auto;text-align: center; 
}

@media only screen and (max-width: 768px) {
  .sectionn-heading{
    font-size: 30px;
   text-align: center;

    max-width: 100%;
  }
  
}
@media only screen and (max-width: 768px){
  .aboutrow{
    max-height: 100%;
    max-width: 85%;


  }
  .counttext{
    font-size: 12px;
  }
}
@media only screen and (max-width: 768px){
  .abouttext{
    margin:0;
    
  }
}

@media only screen and (max-width: 768px){
  .about-text{
    
  }
}

/*CSS FOR CUSTOM SCROLLBAR*/

::-webkit-scrollbar {
        width: 5px;
    }

    /* Track */
    ::-webkit-scrollbar-track {
        background: black;
 
    }

    /* Handle */
    ::-webkit-scrollbar-thumb {
        background: #8166cd;

    }

    /* Handle on hover */
    ::-webkit-scrollbar-thumb:hover {
        background: #555;

    }

    
.col_half { width: 49%; }
.col_third { width: 32%; }
.col_fourth { width: 23.5%; }
.col_fifth { width: 18.4%; }
.col_sixth { width: 15%; }
.col_three_fourth { width: 74.5%;}
.col_twothird{ width: 66%;}
.col_half,
.col_third,
.col_twothird,
.col_fourth,
.col_three_fourth,
.col_fifth{
	position: relative;
	display:inline;
	display: inline-block;
	float: left;
	margin-right: 2%;
	margin-bottom: 20px;
}
.end { margin-right: 0 !important; }
/* Column Grids End */

.wrapperr { width: 70%; margin: 20px auto; position: relative;color: white;font-size: 15px;}
.counter {  padding: 10px 0; border-radius: 5px;}
.count-title {  margin-top: 10px; margin-bottom: 0; text-align: center; font-size: 45px;}
.count-text {   margin-top: 10px; margin-bottom: 0; text-align: center; }
/* ... */

